Updated Acceleo Templates for the changed TyphonMM

--- a/it.univaq.disim.typhonml.xtext.examples/customTypes.tml
+++ b/it.univaq.disim.typhonml.xtext.examples/customTypes.tml
@@ -2,7 +2,7 @@
 CustomDataType jpeg {
 	elements{
 		DataTypeItem date{
-			type date
+			type Date
 			implementation DataTypeImplementationPackage{
 				location 'it.univaq.disim.Date'
 			}
