--- a/it.univaq.disim.typhonml.xtext.examples/primitiveTypes.tml
+++ b/it.univaq.disim.typhonml.xtext.examples/primitiveTypes.tml
@@ -1,7 +1,6 @@
-PrimitiveDataType date{}
-PrimitiveDataType string{}
+PrimitiveDataType Date{}
+PrimitiveDataType String{}
 PrimitiveDataType int{}
-PrimitiveDataType date{}
-PrimitiveDataType real{}
+PrimitiveDataType Real{}
 PrimitiveDataType blob{}
 PrimitiveDataType natural_language{}
