--- a/it.univaq.disim.typhonml.xtext.examples/mydb.tml
+++ b/it.univaq.disim.typhonml.xtext.examples/mydb.tml
@@ -1,22 +1,47 @@
-Entity Photo{
-	genericList PhotoTB
-	attributes {
-		Attribute id{
-			type string
+PrimitiveDataType Date{}
+PrimitiveDataType String{}
+PrimitiveDataType int{}
+PrimitiveDataType Real{}
+PrimitiveDataType blob{}
+PrimitiveDataType natural_language{}
+
+
+CustomDataType jpeg {
+	elements{
+		DataTypeItem date{
+			type Date
+			implementation DataTypeImplementationPackage{
+				location 'it.univaq.disim.Date'
+			}
+		},
+		DataTypeItem thumbnail{
+			type blob
+			implementation DataTypeImplementationPackage{
+				location 'it.univaq.disim.Blob'
+			}
 		}
 	}
-	identifer EntityIdentifier{
-		attributes(id)
-	}
 }
+
+//Entity Photo{
+//	genericList "KeyValueDatabase.PhotoDB"
+//	attributes {
+//		Attribute id{
+//			type String
+//		}
+//	}
+//	identifer EntityIdentifier{
+//		attributes(id)
+//	}
+//}
 
 
 
 Entity Review{
-	genericList ReviewDB
+	genericList "DocumentDatabase.Reviews"
 	attributes {
 		Attribute id{
-			type string
+			type String
 		}
 	}
 	identifer EntityIdentifier{
@@ -25,13 +50,16 @@ Entity Review{
 }
 
 Entity Product{
-	genericList ProdutctDB
+	genericList "RelationalDatabase.ProductTB"
 	attributes {
+		Attribute id{
+			type String
+		},
 		Attribute name{
-			type string
+			type String
 		},
 		Attribute description{
-			type string
+			type String
 		}
 	}
 	relations{
@@ -39,10 +67,10 @@ Entity Product{
 			cardinality zero_many
 			type Review
 		},
-		Relation photos{
-			cardinality one_many
-			type Photo
-		},
+//		Relation photos{
+//			cardinality one_many
+//			type Photo
+//		},
 		Relation orders{
 			cardinality zero_many
 			type Product
@@ -54,13 +82,13 @@ Entity Product{
 }
 
 Entity Order{
-	genericList OrderDB
+	genericList "RelationalDatabase.OrderTB"
 	attributes {
 		Attribute id{
-			type string
+			type String
 		},
 		Attribute date{
-			type date
+			type Date
 		},
 		Attribute totalAmount{
 			type int
@@ -86,10 +114,12 @@ Entity Order{
 }
 
 Entity User{
-	genericList UserDB
+	genericList "RelationalDatabase.UserTB"
 	attributes{
-		Attribute name{
-			type string
+		Attribute id{
+			type String
+		},Attribute name{
+			type String
 		}
 	}
 	relations{
@@ -112,13 +142,14 @@ Entity User{
 }
 
 Entity Comment{
-	genericList CommentDB
+	genericList "DocumentDatabase.Comments"
 	attributes{
 		Attribute id{
-			type string
+			type String
 		},
 		Attribute content{
-			type natural_language
+			type String
+//			type natural_language
 		}
 	}
 	relations{
@@ -133,16 +164,16 @@ Entity Comment{
 }
 
 Entity CreditCard{
-	genericList CreditCardDB
+	genericList "RelationalDatabase.CreditCardTB"
 	attributes{
 		Attribute id{
-			type string
+			type String
 		},
 		Attribute number{
-			type string
+			type String
 		},
 		Attribute expiryDate{
-			type date
+			type Date
 		}
 	}
 	identifer EntityIdentifier{
@@ -150,18 +181,18 @@ Entity CreditCard{
 	}
 }
 
-KeyValueDB PhotoDB{
-	elements{
-		KeyValueElement {
-			key id
-			entity Photo
-			values(jpeg)
-		}
-	}
-}
+//KeyValueDB KeyValueDatabase{
+//	elements{
+//		KeyValueElement PhotoDB{
+//			key PhotoKey
+//			entity Photo
+//			values(jpeg)
+//		}
+//	}
+//}
 
 
-RelationalDB OrderDB{
+RelationalDB RelationalDatabase{
 	tables{
 		Table OrderTB{
 			entity Order
@@ -202,6 +233,18 @@ RelationalDB OrderDB{
 	}
 }
 
+DocumentDB DocumentDatabase{
+	collections{
+		Collection Reviews{
+			entity Review
+		},
+		Collection Comments{
+			entity Comment
+		}
+	}
+}
+
+//it misses the definition of datatypes!!!!!!!
 //RelationalDB CreditCardDB{
 //	tables{
 //		Table CreditCardTB{
@@ -236,14 +279,5 @@ RelationalDB OrderDB{
 //	}
 //}
 
-DocumentDB ReviewDB{
-	collections{
-		Collection reviews{
-			entity Review
-		},
-		Collection comments{
-			entity Comment
-		}
-	}
-}
+
 
