Minor issue corrected on the Xtext example

--- a/it.univaq.disim.typhonml.xtext.examples/mydb.tml
+++ b/it.univaq.disim.typhonml.xtext.examples/mydb.tml
@@ -100,7 +100,7 @@ relationaldb RelationalDatabase{
 		}
 		table {
 			CreditCardDB : CreditCard
-			index productIndex{
+			index creditCardIndex{
 				attributes ("CreditCard.number")
 			}
 			idSpec ("CreditCard.number")
