--- a/it.univaq.disim.typhonml.xtext.examples/mydb.tml
+++ b/it.univaq.disim.typhonml.xtext.examples/mydb.tml
@@ -13,7 +13,6 @@ customdatatype jpeg {
 	}
 }
 
-
 entity Review{
 	id : String
 	product -> Product[1]
@@ -26,7 +25,7 @@ entity Product{
 	description : String
 		
 	review :-> Review."Review.product"[0..*]
-	orders -> Product[0..*]
+	orders -> Order[0..*]
 	identifer (name)
 }
 
@@ -35,11 +34,12 @@ entity Order{
 	date : Date
 	totalAmount : int
 	
-	products -> Product.products[0..*]
+	products -> Product."Product.orders"[0..*]
 	users -> User."User.orders"[1]
 	paidWith -> CreditCard[1]
 	identifer (id)
 }
+
 
 entity User{
 	id : String
@@ -108,6 +108,3 @@ documentdb DocumentDatabase{
 			CommentsDB : Comment
 	}
 }
-
-
-
